--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
             <div class="project-div-container">
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img "  rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
+                        <img class="project-img"  rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;" alt="web design project for an HR company">  
                         <!-- <img class="project-img phone" rel="preload" loading="eager" src="assets/hr phone.png" style="background: #253946d1;" alt="web design project for an HR company">   -->
                     </div>
                     <div class="project-lower-div">
@@ -79,7 +79,7 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img " loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
+                        <img class="project-img" loading="eager" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop">
                         <!-- <img class="project-img phone" loading="eager" src="assets/zbuzz phone.png" style="background: #9d9d9db4;" alt="web design project for an ecommerce shop"> -->
                     </div>
                     <div class="project-lower-div">
@@ -90,8 +90,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager" src="assets/DAO-min.png" style="background: #311742d6;" alt="web design project for a web3 project">
-                        <img class="project-img phone" loading="eager" src="assets/DAO phone.png" style="background: #311742d6;" alt="web design project for a web3 project">
+                        <img class="project-img" loading="eager" src="assets/DAO-min.png" style="background: #311742d6;" alt="web design project for a web3 project">
+                        <!-- <img class="project-img phone" loading="eager" src="assets/DAO phone.png" style="background: #311742d6;" alt="web design project for a web3 project"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Web3 DAO Project</p>
@@ -101,8 +101,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager" src="assets/M4U web projectr cover.jpg" style="background: white;" alt="web design project for a non-profit organisation">
-                        <img class="project-img phone" loading="eager" src="assets/M4U phone cover.png" style="background: white;" alt="web design project for a non-profit organisation">
+                        <img class="project-img" loading="eager" src="assets/M4U web projectr cover.jpg" style="background: white;" alt="web design project for a non-profit organisation">
+                        <!-- <img class="project-img phone" loading="eager" src="assets/M4U phone cover.png" style="background: white;" alt="web design project for a non-profit organisation"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Mission for Ukraine</p>
@@ -112,8 +112,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;" alt="web design project for a coaching project">
-                        <img class="project-img phone" loading="eager" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;" alt="web design project for a coaching project">
+                        <img class="project-img" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;" alt="web design project for a coaching project">
+                        <!-- <img class="project-img phone" loading="eager" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;" alt="web design project for a coaching project"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Coaches for Ukraine</p>
@@ -123,8 +123,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
-                        <img class="project-img phone" loading="eager"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
+                        <img class="project-img" loading="eager"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation">
+                        <!-- <img class="project-img phone" loading="eager"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);" alt="web design project for a non-profit organisation"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Help99 Initiative</p>
@@ -134,8 +134,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
-                        <img class="project-img phone" loading="eager"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
+                        <img class="project-img" loading="eager"  src="assets/UA 911.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine">
+                        <!-- <img class="project-img phone" loading="eager"  src="assets/911 phone.png" style="background-color: #253946dc;" alt="web design project for a fundraising initiative in Ukraine"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">UA 911 Fundraising</p>
@@ -145,8 +145,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
-                        <img class="project-img phone" loading="eager"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
+                        <img class="project-img" loading="eager"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company">
+                        <!-- <img class="project-img phone" loading="eager"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for a fertilizer company"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">AAZ Fertilizer Company</p>
@@ -156,8 +156,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
-                        <img class="project-img phone" loading="eager"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
+                        <img class="project-img" loading="eager"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus">
+                        <!-- <img class="project-img phone" loading="eager"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;" alt="web design project for a mathematical game named Sudoculus"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Sudoculus Game</p>
@@ -167,8 +167,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
-                        <img class="project-img phone" loading="eager"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
+                        <img class="project-img" loading="eager" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector">
+                        <!-- <img class="project-img phone" loading="eager"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);" alt="web design project for an art collector"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Art of Scandinavia</p>
@@ -178,8 +178,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" loading="eager" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;" alt="web design project for an artist, a painter">
-                        <img class="project-img phone" loading="eager" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;" alt="web design project for an artist, a painter">
+                        <img class="project-img" loading="eager" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;" alt="web design project for an artist, a painter">
+                        <!-- <img class="project-img phone" loading="eager" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;" alt="web design project for an artist, a painter"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Pilar Elias Art</p>
@@ -189,8 +189,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" rel="preload" loading="eager" src="assets/Active mode-min.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Active Mode, a sport social media platform">
-                        <img class="project-img phone" rel="preload" loading="eager" src="assets/am phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Active Mode, a sport social media platform">
+                        <img class="project-img" rel="preload" loading="eager" src="assets/Active mode-min.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Active Mode, a sport social media platform">
+                        <!-- <img class="project-img phone" rel="preload" loading="eager" src="assets/am phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Active Mode, a sport social media platform"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Active Mode App</p>
@@ -200,8 +200,8 @@
                 </div>
                 <div class="project-div-main">
                     <div class="project-uppper-div">
-                        <img class="project-img web" src="assets/Sudoculus app.jpg" alt="App design with full set of icon design for Sudoculus, a math based game">
-                        <img class="project-img phone" src="assets/Sudoculus phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Sudoculus, a math based game"> 
+                        <img class="project-img" src="assets/Sudoculus app.jpg" alt="App design with full set of icon design for Sudoculus, a math based game">
+                        <!-- <img class="project-img phone" src="assets/Sudoculus phone.png" style="background: #434c5ad1;" alt="App design with full set of icon design for Sudoculus, a math based game">  -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Sudoculus App</p>
@@ -212,7 +212,7 @@
                 <div class="project-div-main">
                     <div class="project-uppper-div">
                         <img class="project-img web"  src="assets/word puzzle.jpg" alt="App design for a puzzle game">
-                        <img class="project-img phone"  src="assets/puzzle phone.png" alt="App design for a puzzle game">
+                        <!-- <img class="project-img phone"  src="assets/puzzle phone.png" alt="App design for a puzzle game"> -->
                     </div>
                     <div class="project-lower-div">
                         <p class="project-title">Word Puzzle Game</p>
